meja/tests/row-commute.meja
let f = fun (x1 : [> `A],
             x2 : [> `B],
             x3 : [> `C],
             x4 : [> `D],
             x5 : [< `A | `B | `C],
             b) => {
  let y1 = if (b) { x1; } else { x2; };
  let y2 = if (b) { x3; } else { x4; };
  let y3 = if (b) { x2; } else { x4; };
  let y4 = if (b) { x1; } else { x5; };
  (y1, y2, y3, y4);
};
